Recursively find all source subdirectories and files.

--- a/C_C++/Makefile_plain
+++ b/C_C++/Makefile_plain
@@ -1,57 +1,59 @@
 ###############################################################################
 #                                                                             #
-#                          General Makefile for C++                           #
-#           Copyright (C) 2014 Grant Ayers <ayers@cs.stanford.edu>            #
+#                        General Makefile for C/C++                           #
+#           Copyright (C) 2015 Grant Ayers <ayers@cs.stanford.edu>            #
 #           Hosted at GitHub: https://github.com/grantea/makefiles            #
 #                                                                             #
 # This file is free software distributed under the BSD license. See LICENSE   #
 # for more information.                                                       #
 #                                                                             #
-# This is a single-target, general-purpose Makefile for C++ projects. It is   #
+# This is a single-target, general-purpose Makefile for C/C++ projects. It is #
 # desgined for use with GNU Make and GCC, but may work with other software    #
 # with little or no modification.                                             #
 #                                                                             #
-# Set the target name, source root (and subdirectories), and any desired      #
-# compiler options. All dependencies (including header file changes) will     #
-# be handled automatically.                                                   #
+# Set the program name, source root, and any desired compiler options.        #
+# All dependencies (including header file changes) will be                    #
+# handled automatically.                                                      #
 #                                                                             #
 ###############################################################################
 
 
 #---------- Basic settings  ----------#
-TARGET   = example
-SRC_DIRS = src src/util
-
+PROGRAM_NAME := example
+SOURCE_BASE  := src
+BUILD_BASE   := build
 
 #---------- Compilation and linking ----------#
-CXX        = g++
-SRC_SUFFIX = .cc .c
-CXX_LANG   = -Wall -Wextra -pedantic -Wfatal-errors -std=c++11
-CXX_OPT    = -O3 -march=native -flto
-INC_DIRS   = -Isrc
-LINK_FLAGS =
+CXX        := g++
+SRC_EXTS   := .cc .c
+CXX_LANG   := -Wall -Wextra -pedantic -Wfatal-errors -std=c++11
+CXX_OPT    := -O3 -march=native -flto
+INC_DIRS   := -I$(SOURCE_BASE)
+LINK_FLAGS := -lm
 
 
 #---------- No need to modify below ----------#
-SRCS = $(foreach EXT,$(SRC_SUFFIX),$(patsubst %,%/*$(EXT),$(SRC_DIRS)))
-OBJS = $(foreach EXT,$(SRC_SUFFIX),$(patsubst %$(EXT),%.o,$(filter %$(EXT),$(wildcard $(SRCS)))))
-DEPS = $(OBJS:.o=.d)
-OPTS = $(CXX_LANG) $(CXX_OPT)
+DIRS := $(shell find $(SOURCE_BASE) -type d -print)
+SRCS := $(foreach DIR,$(DIRS),$(foreach EXT,$(SRC_EXTS),$(wildcard $(DIR)/*$(EXT))))
+OBJS := $(addsuffix .o,$(addprefix $(BUILD_BASE)/,$(SRCS)))
+DEPS := $(OBJS:.o=.d)
+OPTS := $(CXX_LANG) $(CXX_OPT)
+APP  := $(BUILD_BASE)/$(PROGRAM_NAME)
 
 .PHONY: clean all
 
-all: $(TARGET)
+all: $(APP)
 
-$(TARGET) : $(OBJS)
+$(APP) : $(OBJS)
 	@echo [LD] $@
-	@$(CXX) $(OPTS) $(OBJS) $(LINK_FLAGS) -o $(TARGET)
+	@$(CXX) $(OPTS) $(OBJS) $(LINK_FLAGS) -o $(APP)
 
-$(SRC_SUFFIX:=.o) :
+$(SRC_EXTS:=.o) :
 	@echo [CC] $@
 	@$(CXX) $(OPTS) $(INC_DIRS) -MD -MP -c -o $@ $<
 
 clean:
-	rm -f $(OBJS) $(DEPS) $(TARGET)
+	rm -f $(OBJS) $(DEPS) $(APP)
 
 -include $(DEPS)
 
